--- a/Lab4/app/views/customers/index.html.erb
+++ b/Lab4/app/views/customers/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Customers</h1>
 
-<table>
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Firstname</th>
@@ -16,7 +16,7 @@
       <th>Phone</th>
       <th>Fax</th>
       <th>Email</th>
-      <th>Supportrepid</th>
+      <th>Support Rep ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -36,13 +36,20 @@
         <td><%= customer.Fax %></td>
         <td><%= customer.Email %></td>
         <td><%= customer.SupportRepId %></td>
-        <td><%= link_to 'Show Invoices', customer_invoices_path(customer) %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (image_tag 'show.ico'), customer_invoices_path(customer) %></td>
+        <td><%= link_to (image_tag 'edit.png'), edit_customer_path(customer) %></td>
+        <td><%= link_to (image_tag 'delete-32.ico'), customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<div class="digg_pagination">
+  <div class="page_info">
+    <%= page_entries_info @customers %>
+  </div>
+  <%= will_paginate @customers, :container => false %>
+</div>
 
 <br>
 
